--- a/index.html
+++ b/index.html
@@ -47,22 +47,16 @@
     </div>
     <div class="slider">
         <div class="col">
-            <div class="eleslider active_2">
+            <div class="eleslider">
                 <img src="images/logo.png" alt="">
                 <p>Start Coding Club</p>
             </div>
-            <div class="eleslider"><img src="images/logo.png" alt="">
-                <p>Start Coding Club</p></div>
-            <div class="eleslider"><img src="images/logo.png" alt="">
-                <p>Start Coding Club</p></div>
-            <div class="eleslider"><img src="images/logo.png" alt="">
-                <p>Start Coding Club</p></div>
         </div>
         <div class="dots">
-            <span class="dot active_3" onclick="dotClick1()"></span>
-            <span class="dot" onclick="dotClick2()"></span>
-            <span class="dot" onclick="dotClick3()"></span>
-            <span class="dot" onclick="dotClick4()"></span>
+            <span onclick="dotClick1()"></span>
+            <span onclick="dotClick2()"></span>
+            <span onclick="dotClick3()"></span>
+            <span onclick="dotClick4()"></span>
         </div>
     </div>
     <script src="index_Js.js"></script>
