--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <span onclick="dotClick4()"></span>
         </div>
     </div>
+    <div></div>
     <script src="index_Js.js"></script>
 </body>
 </html>
