--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         </div>
     </div>
     <div class="icon">
-        <a href=""><i class="fa fa-facebook-square"></i></a>
-         <a href=""><i class="fa fa-instagram"></i></a>
-        <a href=""><i class="fa fa-envelope"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100068577551540" target="_blank"><i class="fa fa-facebook-square"></i></a>
+         <a href="https://www.instagram.com/startcodingclub/" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="mailto:startcodingclubb@outlook.com" target="_blank"><i class="fa fa-envelope"></i></a>
     </div>
     <div class="slider">
         <div class="col">
