Nadhir New Update v1.0.7

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,6 +22,7 @@
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="css/colorStyle.css">
 </head>
+
 <body>
     <header>
         <div class="logo"><img src="images/logo.png" alt=""></div>
@@ -36,24 +38,28 @@
             <div>Welcome To</div>
             <h1>Start Coding Club</h1>
         </div>
-        <p>Hello everyone. welcome to start coding club .it is for computer sciences students of university Constantine 2. abdelhamide Mehri, the club has been created to practice programming and practices all that we study on the theoretical side, the members divide into groups and we compete for projects.</p>
+        <p>Hello everyone. welcome to start coding club .it is for computer sciences students of university Constantine
+            2. abdelhamide Mehri, the club has been created to practice programming and practices all that we study on
+            the theoretical side, the members divide into groups and we compete for projects.</p>
         <p>Join Us</p>
         <div>
-            <a href="">Sign Up</a>
-            <a href="">Sign In</a>
+            <a href="pages/sign_up/signUp.html">Sign Up</a>
+            <a href="pages/login/login.html">Sign In</a>
         </div>
     </div>
     <div class="about" id="about">
         <h1>Who are Start Coding Club?</h1>
         <div class="par">
             <h2>About the club</h2>
-            <p>it's an app development club created by L2 students to start coding by organizing competition between us to
+            <p>it's an app development club created by L2 students to start coding by organizing competition between us
+                to
                 encourage us practicing</p>
         </div>
         <span></span>
         <div class="par">
             <h2>About Team</h2>
-            <p>We create a competitive environment dividing ourselves into small group (5 students for each group) then we
+            <p>We create a competitive environment dividing ourselves into small group (5 students for each group) then
+                we
                 compete with each other for how builds the best website.</p>
         </div>
         <span></span>
@@ -64,8 +70,9 @@
         </div>
     </div>
     <div class="icon">
-        <a href="https://www.facebook.com/profile.php?id=100068577551540" target="_blank"><i class="fa fa-facebook-square"></i></a>
-         <a href="https://www.instagram.com/startcodingclub/" target="_blank"><i class="fa fa-instagram"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100068577551540" target="_blank"><i
+                class="fa fa-facebook-square"></i></a>
+        <a href="https://www.instagram.com/startcodingclub/" target="_blank"><i class="fa fa-instagram"></i></a>
         <a href="mailto:startcodingclub@outlook.com" target="_blank"><i class="fa fa-envelope"></i></a>
     </div>
     <div class="slider">
@@ -76,12 +83,13 @@
             </div>
         </div>
         <div class="dots">
-            <span onclick="dotClick1()"></span>
-            <span onclick="dotClick2()"></span>
-            <span onclick="dotClick3()"></span>
-            <span onclick="dotClick4()"></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </div>
-    <script src="index_Js.js"></script>
+    <script type="module" src="index_Js.js"></script>
 </body>
+
 </html>
