--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>Hello everyone. welcome to start coding club .it is for computer sciences students of university Constantine
             2. abdelhamide Mehri, the club has been created to practice programming and practices all that we study on
             the theoretical side, the members divide into groups and we compete for projects.</p>
-        <p>Join Us</p>
+        <p>Join Now</p>
         <div>
             <a href="pages/sign_up/signUp.html">Sign Up</a>
             <a href="pages/login/login.html">Sign In</a>
@@ -89,7 +89,7 @@
             <span></span>
         </div>
     </div>
-    <script type="module" src="index_Js.js"></script>
+    <script type="module" src="JS/index_Js.js"></script>
 </body>
 
 </html>
